WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153790
Modern IDB: storage/indexeddb/dont-wedge.html sometimes ASSERTs
https://bugs.webkit.org/show_bug.cgi?id=153790
Summary
Modern IDB: storage/indexeddb/dont-wedge.html sometimes ASSERTs
Brady Eidson
Reported
2016-02-02 10:07:02 PST
Modern IDB: storage/indexeddb/dont-wedge.html sometimes ASSERTs This test uncovers an unhandled race between the main thread trying to get an open operation handled and the server thread actually performing the open. There was already a flag meant to cover this race, and it just needs to be applied to one more site.
Attachments
Patch v1
(3.76 KB, patch)
2016-02-02 10:10 PST
,
Brady Eidson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-02-02 10:10:05 PST
Created
attachment 270494
[details]
Patch v1
Brady Eidson
Comment 2
2016-02-02 11:31:41 PST
http://trac.webkit.org/changeset/196021
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug