Modern IDB: storage/indexeddb/dont-wedge.html sometimes ASSERTs. https://bugs.webkit.org/show_bug.cgi?id=153790

Reviewed by Tim Horton.

Source/WebCore:

No new tests (Failing test now unskipped).

This test uncovered an unhandled race where the main thread tried to perform an OpenDB operation
multiple times while it was already in-progress on the server thread.

There was already a flag meant to cover this race, and it just needed to be applied to one more site.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::performCurrentOpenOperation):
(WebCore::IDBServer::UniqueIDBDatabase::openBackingStore):

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/171880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196021 268f45cc-cd09-0410-ab3c-d52691b4dbfc